--- a/css/main.css
+++ b/css/main.css
@@ -321,11 +321,6 @@ a
 
 }
 
-.fundraiserTitle p
-{
-
-}
-
 #fundraiserText
 {
 	grid-column: 1/-1;
@@ -952,8 +947,8 @@ a
 	height: auto;
 	width: 50%;
 	padding: 10px;
-	background-color: #d9bb9a;
-	color: #915d4a;
+	background-color: #cedcad;
+	color: #5d7032;
 }
 
 input[ type=text ], input[ type=email ], select, textarea
@@ -973,9 +968,12 @@ input [ type=text ], select, textarea, #message
 	padding-bottom: 100px;
 }
 
-input [ type=submit ]
+.submit
 {
 	padding: 5px;
+	color: #5d7032;
+	border: dashed 1px #5d7032;
+	background-color: #FFF;
 }
 
 /*membership section*/
@@ -1111,27 +1109,268 @@ input [ type=submit ]
 	padding-left: 40px;
 }
 
+/*PROJ TEMPLATE PAGE*/
+.project
+{
+	margin-top: 25px;
+	margin-bottom: 25px;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	text-align: center;
+	height: auto;
+	color: #5d7032;
+}
+
+.project1
+{
+	width: 100%;
+	margin: 0 auto;
+}
+
+.projectImageCon
+{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.projimage
+{
+	margin-top: 20px;
+	margin-bottom: 20px;
+	width: 200px;
+	height: 175px;
+	background-color: #333; 
+}
+
+.project1TextCon
+{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	margin-bottom: 20px;
+}
+
+.project1TextCon p
+{
+	margin-top: 15px;
+	text-indent: 10px;
+	font-size: 24px;
+	line-height: 30px;
+}
+
+#subtitle p
+{
+	text-indent: 0px;
+	width: 450px;
+	font-size: 30px;
+	font-family: 'Noto Sans JP', sans-serif;
+}
+	
+.project2
+{
+	color: #5d7032;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	text-align: center;
+	width: 100%;
+	height: auto;
+	margin-top: 25px;
+	margin-bottom: 25px;
+}
+
+.project2ImageCon 
+{
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
+}
+
+
+.project2TextCon 
+{
+	margin-top: 15px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	margin-top: 10px;
+	margin-bottom: 20px; 
+}
+
+.project2TextCon p 
+{
+	width: 100%;
+	font-size: 24px;
+	font-family: 'Noto Sans JP', sans-serif;
+	margin-right: 50px;
+	line-height: 27px;
+}
+
 
 /*MEDIA QUERIES*/
-@media screen and (min-width: 600px;) {
+@media screen and (min-width: 600px) {
 	
+	/*ALL PAGES*/
 	.tabImg
 	{
 		display: block;
 	}
 
-	.web
-	{
-		display: block;
-	}
-
-	.mobileImgs
+	.mobileImg
 	{
 		display: none;
+		width: 0px;
+		height: 0px;
+	}
+
+	#fundraiser
+	{
+		width: 600px;
+		height: auto;
+		margin: 0 auto;
+		font-size: 30px;
+		color: #5d7032;
+		font-family: 'Noto Sans JP', sans-serif;
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr;
+		grid-template-rows: 30px 150px 150px 150px 150px;
+		grid-row-gap: 20px; 
+		grid-column-gap: 10px;
+	}
+
+	#fundraiser p
+	{
+		font-size: 24px;
+		line-height: 35px;
+		text-align: center;
+		grid-column: span 3;
+	}
+
+	#fundraiserImgs
+	{
+		width: 100%;
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		grid-row: 3/5;
+		grid-column: 1/-1;
+	}
+
+	.fundraiserImg.img1
+	{
+		margin-left: 10px;
+	}
+
+	/*getting rid of images that are still displaying in DOM for some reason*/
+	.fundraiserImg.img1.mobileImg { display: none; } .fundraiserImg.img1.web { display: none; }
+	.fundraiserImg.img2.mobileImg { display: none; } .fundraiserImg.img2.web { display: none; }
+	.fundraiserImg.img3.mobileImg { display: none; } .fundraiserImg.img3.web { display: none; }
+
+	.fundraiserTitle
+	{
+		margin: 0 auto;
+		text-align: center;
+		line-height: 35px;
+		grid-row: 4/5;
+		grid-column: 1/-1;
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+	}
+
+	#fundraiserText
+	{
+		margin: 0 auto;
+		width: 90%;
+		grid-row: 2/5;
+		grid-column: 1/-1;
+		line-height: 35px;
+	}
+
+	#fundraiserText2
+	{
+		grid-row: 5/-1;
+		grid-column: 1/-1;
+		width: 80%;
+		margin: 0 auto;
+	}
+	
+	#about
+	{
+		margin-top: 25px;
+		margin-bottom: 25px;
+		width: 100%;
+		height: auto;
+		color: #5d7032;
+	}
+
+	#about1
+	{
+		width: 90%;
+	}
+
+	.aboutImageCon
+	{
+		width: 310px;
+	}
+
+	#about1TextCon
+	{
+		display: flex;
+		padding: 10px;
+		flex-direction: column;
+		margin-bottom: 20px;
+	}
+
+	#about1TextCon p
+	{
+		font-size: 24px;
+		padding-left: 10px; 
+		margin-bottom: 20px;
+		line-height: 35px;
+	}
+		
+	#about2
+	{
+		color: #5d7032;
+		width: 90%;
+		height: auto;
+		margin-top: 25px;
+		margin-bottom: 25px;
+		margin: 0 auto;
+	}
+
+	.about2ImageCon 
+	{
+		width: 310px;
+		margin-bottom: 20px;
+		margin: 0 auto;
+	}
+
+	#about2TextCon 
+	{
+		display: flex;
+		flex-direction: column;
+		padding: 10px;
+		margin: 0 auto; 
+	}
+
+	#about2TextCon p 
+	{
+		font-size: 24px;
+		font-family: 'Noto Sans JP', sans-serif;
+		margin-right: 25px;
+		margin-bottom: 10px;
+		line-height: 35px;
+		text-indent: 25px;
 	}
 
 
-}
+} /*end tablet query*/
 
 @media screen and (min-width: 960px) {
 
@@ -1144,6 +1383,19 @@ input [ type=submit ]
 {
 	display: block;
 }
+
+.fundraiserImg.img1.web { display: block; }
+.fundraiserImg.img2.web { display: block; }
+.fundraiserImg.img3.web { display: block; }
+
+.tabImg
+{
+	display: none;
+}
+
+.fundraiserImg.img1.tabImg { display: none; }
+.fundraiserImg.img2.tabImg { display: none; }
+.fundraiserImg.img3.tabImg { display: none; }
 
 #burger
 {
@@ -1181,6 +1433,7 @@ input [ type=submit ]
 .title
 {
 	font-family: 'Noto Sans JP', sans-serif;
+	width: 100%;
 	color: #5d7032;
 	font-size: 36px;
 	margin-top: 5px; 
@@ -1262,6 +1515,11 @@ input [ type=submit ]
 	color: #FFF;
 }
 
+#burgerCon ul li a:active {
+	color: #FFF;
+	background-color: #cedcad;
+}
+
 #burgerCon
 {
 	display: flex;
@@ -1308,18 +1566,25 @@ input [ type=submit ]
 	padding: 10px; 
 }
 
+.memberTitle
+{
+	width: 940px;
+	padding: 10px;
+
+}
+
 #fundraiser
 {
-	width: 960px;
+	width: 90%;
 	height: auto;
 	font-size: 30px;
 	color: #5d7032;
 	font-family: 'Noto Sans JP', sans-serif;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
-	grid-template-rows: 30px 100px 175px 100px;
+	grid-template-rows: 30px 150px 175px 100px 125px;
 	grid-column-gap: 50px;
-	grid-row-gap: 20px; 
+	grid-row-gap: 10px; 
 }
 
 #fundraiser p
@@ -1333,31 +1598,36 @@ input [ type=submit ]
 
 #fundraiserImgs
 {
-	width: 90%;
+	width: 100%;
 	margin: 0 auto;
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
+	justify-content: space-around;
 	grid-row: 3/5;
-	grid-column: 1/-1
+	grid-column: 1/-1;
 }
 
 .fundraiserImg
 {
-	width: 225px;
-	height: 175px;
+	margin-left: 0px !important;
 }
 
 .fundraiserTitle
 {
 	margin: 0 auto;
+	width: 100%;
 	text-align: center;
 	line-height: 35px;
 	grid-row: 4/5;
 	grid-column: 1/-1;
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
+	justify-content: space-around;
+}
+
+.fundraiserTitle p
+{
+	justify-content: center;
 }
 
 #fundraiserText
@@ -1429,17 +1699,36 @@ input [ type=submit ]
 	color: #FFF;
 }
 
+#footerNav ul li a:active {
+	color: #FFF;
+	background-color: #cedcad;
+}
+
+.search
+{
+  display: block;
+  width: 75%;
+  height: 20px;
+  padding: 5px;
+  margin-left: 30px;
+  border: 1px solid #333;
+  border-radius: 3px 0px 3px 0px;
+  background-color: #fefefe;
+  box-shadow: inset 0 1px 2px rgba(10,10,10, 0.1);
+  color: #0a0a0a;
+}
+
 .sbutton
 {
-	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#b2c584+0,cced87+100 */
-	background: #b2c584; /* Old browsers */
-    background: -moz-linear-gradient(top, #b2c584 0%, #cced87 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #b2c584 0%,#cced87 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #b2c584 0%,#cced87 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b2c584', endColorstr='#cced87',GradientType=0 ); /* IE6-9 */
-	box-shadow: 2px 1px 18px #a6b87b;
-	border-radius: 10px;
-	padding: 5px;
+  height: 25px;
+  width: 100px;
+  border-radius: 10px;
+  text-align: center;
+  font-size: 14px;
+  background-color: #5d7032;
+  color: #FFF;
+  border: 0;
+  margin-left: 5px;
 }
 
 /*INDEX PAGE*/
@@ -1528,10 +1817,15 @@ input [ type=submit ]
 {	
 	margin-left: 40px;
 	font-size: 22px;
-	text-indent: 25px;
 	line-height: 35px;
 	grid-column: 1/-1;
 	grid-row: 2/-1;
+}
+
+.announcement p
+{
+	text-indent: 20px;	
+	margin-bottom: 5px;
 }
 
 .announcement h2
@@ -1570,6 +1864,11 @@ input [ type=submit ]
 	text-indent: 20px;
 	font-size: 22px;
 	line-height: 35px;
+}
+
+.businessText h3
+{
+	width: 100%;
 }
 
 .businessesImg
@@ -1634,6 +1933,7 @@ input [ type=submit ]
 {
 	width: 975px;
 	display: flex;
+	justify-content: center;
 	margin: 0 auto;
 }
 
@@ -1705,14 +2005,15 @@ input [ type=submit ]
 {
 	margin-top: 25px;
 	margin-bottom: 25px;
-	width: 975px;
+	width: 960px;
 	color: #5d7032;
 }
 
 #contactTop
 {
-	width: 975px;
+	width: 960px;
 	display: flex;
+	flex-direction: row;
 	margin: 0 auto;
 }
 
@@ -1727,7 +2028,6 @@ input [ type=submit ]
 {
 	display: flex;
 	flex-direction: column;
-	margin-left: 30px;
 	margin-bottom: 20px;
 }
 
@@ -1736,6 +2036,14 @@ input [ type=submit ]
 	font-size: 24px;
 	margin-top: 15px;
 	line-height: 35px;
+	text-align: left;
+}
+
+.FbuttonCon
+{
+	width: 50%;
+	margin: 0 auto;
+	padding-top: 45px;
 }
 
 .button
@@ -1770,7 +2078,7 @@ input [ type=submit ]
 #cont2
 {
 	color: #5d7032;
-	width: 975px;
+	width: 960px;
 	height: auto;
 	margin-top: 25px;
 }
@@ -1778,11 +2086,11 @@ input [ type=submit ]
 #contactForm
 {
 	margin: 0 auto;
-	height: 370px;
+	height: auto;
 	width: 500px;
 	padding: 10px;
-	background-color: #d9bb9a;
-	color: #915d4a;
+	background-color: #cedcad;
+	color: #5d7032;
 }
 
 #cont2TextCon 
@@ -1821,6 +2129,14 @@ input [ type=text ], select, textarea, #message
 	padding-bottom: 100px;
 }
 
+.submit
+{
+	padding: 5px;
+	color: #5d7032;
+	border: dashed 1px #5d7032;
+	background-color: #FFF;
+}
+
 /*membership section*/
 
 #memberCon
@@ -1837,6 +2153,7 @@ input [ type=text ], select, textarea, #message
 {
 	width: 960px;
 	display: flex;
+	flex-direction: row;
 	margin: 0 auto;
 }
 
@@ -1851,20 +2168,28 @@ input [ type=text ], select, textarea, #message
 #memTextCon
 {
 	font-size: 24px;
-	padding-left: 30px;
+	padding-left: 10px;
 	margin-bottom: 20px;
 	line-height: 35px;
 }
 
 #memTextCon p
 {
-	text-indent: 25px;
+	text-indent: 20px;
+	text-align: left;
+}
+
+.memsub
+{
+	text-align: left;
 }
 
 .deal h3
 {
 	font-weight: bold;
 	font-size: 24px;
+	text-indent: 0px;
+	text-align: left;
 }
 
 /*PAST EVENTS*/
@@ -1873,31 +2198,32 @@ input [ type=text ], select, textarea, #message
 {
 	margin-top: 25px;
 	margin-bottom: 25px;
-	width: 975px;
+	width: 960px;
 	height: auto;
 	color: #5d7032;
 }
 
 .eventBox
 {
-	width: 975px;
+	width: 940px;
 	padding-top: 15px;
-	margin-left: 50px;
+	margin: 0px;
 	display: grid;
+	justify-content: center;
 	grid-template-rows: repeat(18, 125px); 
 	grid-template-columns: repeat(3, 225px);
-	grid-column-gap: 100px; 
+	grid-column-gap: 75px; 
 	grid-row-gap: 10px;
 }
 
 #evBottom
 {
-	margin-left: 225px;
 	padding-top: 15px;
 	display: grid;
 	grid-template-rows: auto; 
+	justify-content: center;
 	grid-template-columns: repeat(2, 225px);
-	grid-column-gap: 100px; 
+	grid-column-gap: 75px; 
 	grid-row-gap: 10px;
 }
 
@@ -1987,14 +2313,14 @@ input [ type=text ], select, textarea, #message
 {
 	margin-top: 25px;
 	margin-bottom: 25px;
-	width: 975px;
+	width: 960px;
 	height: auto;
 	color: #5d7032;
 }
 
 #newsletter
 {
-	width: 975px;
+	width: 960px;
 	display: flex;
 	margin: 0 auto;
 }
@@ -2053,7 +2379,7 @@ input [ type=text ], select, textarea, #message
 #newsletters ul
 {
 	list-style: none;
-	padding-left: 40px; 
+	padding-left: 20px; 
 	text-align: left;
 	display: block;
 }
@@ -2061,9 +2387,10 @@ input [ type=text ], select, textarea, #message
 #newsletters ul li a
 {
 	color: #5d7032;
-	padding: 10px;
-	font-weight: bold;
+	padding-top: 10px;
+	font-weight: normal;
 	text-decoration: none;
+	font-size: 16px;
 	line-height: 20px;
 }
 
@@ -2071,6 +2398,11 @@ input [ type=text ], select, textarea, #message
 {
 	color: #485725;
 	padding: 20px;
+}
+
+.toggle
+{
+	font-size: 20px !important;
 }
 
 /* Projects Page */
@@ -2097,7 +2429,7 @@ input [ type=text ], select, textarea, #message
 	margin-top: 25px;
 	margin-bottom: 25px;
 	line-height: 35px;
-	width: 975px;
+	width: 960px;
 	height: auto;
 	color: #5d7032;
 }
@@ -2144,20 +2476,15 @@ input [ type=text ], select, textarea, #message
 	margin-bottom: 20px;
 }
 
-.projImgs
-{
-	padding: 15px;
-}
-
 
 #projectArchives
 {
-	width: 400px;
+	width: 100%;
 	display: flex;
-	flex-direction: row;
-	justify-content: space-between; 
+	flex-direction: column;
+	justify-content: center;
+	margin: 0 auto;
 	margin-bottom: 20px;
-	margin-left: 10px;
 }
 
 .projButton
@@ -2182,15 +2509,16 @@ input [ type=text ], select, textarea, #message
 {
 	margin-top: 25px;
 	margin-bottom: 25px;
-	width: 975px;
+	width: 960px;
 	height: auto;
 	color: #5d7032;
 }
 
 .project1
 {
-	width: 975px;
+	width: 960px;
 	display: flex;
+	flex-direction: row;
 	margin: 0 auto;
 }
 
@@ -2241,6 +2569,7 @@ input [ type=text ], select, textarea, #message
 {
 	color: #5d7032;
 	display: flex;
+	flex-direction: row;
 	width: 975px;
 	height: auto;
 	margin-top: 25px;
@@ -2314,7 +2643,7 @@ input [ type=text ], select, textarea, #message
 
 #mainNav {
 	height: 150px;
-	width: 1050px;
+	width: 1024px;
 	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#cedcad+0,ffffff+100 */
 	background: #cedcad; /* Old browsers */
     background: -moz-linear-gradient(top, #cedcad 0%, #ffffff 100%); /* FF3.6-15 */
@@ -2374,7 +2703,7 @@ input [ type=text ], select, textarea, #message
 
 #footer {
 	height: 50px;
-	width: 1050px;
+	width: 1024px;
 	margin: 0 auto;
 	color: #5d7032;
 	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,cedcad+100 */
@@ -2393,7 +2722,7 @@ input [ type=text ], select, textarea, #message
 
 #footerNav ul
 {
-	width: 1050px;
+	width: 1024px;
 	display: flex;
 	height: 50px;
 }
@@ -2747,25 +3076,37 @@ input [ type=text ], select, textarea, #message
 {
 	margin-top: 25px;
 	margin-bottom: 25px;
-	width: 975px;
+	margin: 0 auto;
+	width: 960px;
 	height: auto;
 	color: #5d7032;
 }
 
 .announcements
 {	
-	width: 975px;
+	width: 940px;
 	padding: 10px;
 	margin-left: 30px;
-	display: flex;
+	font-family: 'Noto Sans JP', sans-serif;
+	display: grid;
+	grid-gap: 40px;
+	grid-template-columns: 300px 1fr;
+	grid-template-rows: 300px auto;
 }
 
 .announcement
 {	
 	margin-left: 40px;
-	width: 500px;
 	font-size: 22px;
-	line-height: 40px;
+	line-height: 35px;
+	grid-column: 1/-1;
+	grid-row: 2/-1;
+}
+
+.announcement p
+{
+	text-indent: 20px;	
+	margin-bottom: 5px;
 }
 
 .announcement h2
@@ -2806,6 +3147,12 @@ input [ type=text ], select, textarea, #message
 	flex-direction: row;
 	font-size: 22px;
 	line-height: 40px;
+}
+
+.businessText h3
+{
+	width: 150%;
+	margin-left: 0px;
 }
 
 .businessesImg
